sort.baseball.lessons.sort.baseball.NaiveBaseball.scala.error
NaiveBaseball:19: error: not found: value getCouleurBase
      	var tmpDist=getCouleurBase(baseBouger,i) -  baseBouger
                    ^